spacing issue fixed for small devices

--- a/src/components/Reviews/index.css
+++ b/src/components/Reviews/index.css
@@ -77,4 +77,9 @@
         font-size: 31px;
         width: 300px;
     }
+
+    .reviewWrapper {
+        margin: 0 0 70px 0;
+
+    }
 }
