--- a/src/components/Support/index.css
+++ b/src/components/Support/index.css
@@ -68,6 +68,7 @@
         gap: 30px;
         height: fit-content;
         padding: 56px 35px;
+        margin: 0 0 70px 0;
         box-sizing: border-box;
     }
 
