--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -22,7 +22,7 @@
 
 @media screen and (max-width: 760px) {
     .heros {
-        margin: 30px 0 120px 0;
+        margin: 30px 0 70px 0;
     }
 }
 
